--- a/RollerDerbyPad/www/index.html
+++ b/RollerDerbyPad/www/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
+    <!-- css -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
+    <link href="css/animations.css" rel="stylesheet">
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -15,7 +17,36 @@
   </head>
 
   <body ng-app="rollerDerby" ng-controller="shellController as shellCtrl">
+
+
+    <ion-nav-bar class="bar-soccer bar-stable" ng-show="currentPage === &apos;login&apos; || currentPage === &apos;register&apos;">
+      <ion-nav-back-button ng-hide="currentPage === &apos;login&apos;"></ion-nav-back-button>
+    </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
+
+    <!-- toast -->
+    <div ng-if="toast.type === &apos;general&apos;" ng-show="toast.toggle" class="bar bar-footer bar-calm" ng-class="{slideUp: toast.toggle, slideDown: !toast.toggle}">
+      <div class="title">{{toast.message}}</div>
+      <button class="button button-clear"></button>
+    </div>
+    <div ng-if="toast.type === &apos;success&apos;" ng-show="toast.toggle" class="bar bar-footer bar-balanced" ng-class="{slideUp: toast.toggle, slideDown: !toast.toggle}">
+      <div class="title">{{toast.message}}</div>
+    </div>
+    <div ng-if="toast.type === &apos;error&apos;" ng-show="toast.toggle" class="bar bar-footer bar-assertive" ng-class="{slideUp: toast.toggle, slideDown: !toast.toggle}">
+      <div class="title">{{toast.message}}</div>
+    </div>
+
+    <nav-bar ng-hide="currentPage === &apos;login&apos; || currentPage === &apos;register&apos;"></nav-bar>
+
+    <!-- modal -->
+    <div ng-if="currentModal != &apos;&apos;" class="backdrop visible active"></div>
+    <div ng-if="currentModal != &apos;&apos;" class="popup-container popup-showing active">
+        <div ng-if="currentModal === &apos;accountModal&apos;"><account-modal></account-modal></div>
+        <div ng-if="currentModal === &apos;teamModal&apos;"><team-modal></team-modal></div>
+        <div ng-if="toast.type === &apos;error&apos;" ng-show="toast.toggle" class="bar bar-footer bar-assertive" ng-class="{slideUp: toast.toggle, slideDown: !toast.toggle}">
+          <div class="title">{{toast.message}}</div>
+        </div>
+    </div>
 
     <!-- libraries -->
     <script src="lib/underscore-1.4.4.min.js"></script>
@@ -33,13 +64,20 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/shellController.js"></script>
     <script src="js/controllers/loginController.js"></script>
+    <script src="js/controllers/registerController.js"></script>
+    <script src="js/controllers/homeController.js"></script>
+    <script src="js/controllers/gameController.js"></script>
+    <script src="js/controllers/teamController.js"></script>
 
     <!-- services -->
-    <script src="js/services/toastService.js"></script>
     <script src="js/services/viewService.js"></script>
     <script src="js/services/dataService.js"></script>
-    <script src="js/services/configService.js"></script>
+    <script src="js/services/messageService.js"></script>
+    <script src="js/services/toastService.js"></script>
 
     <!-- directives -->
+    <script src="js/directives/navBar.js"></script>
+    <script src="js/directives/accountModal.js"></script>
+    <script src="js/directives/teamModal.js"></script>
   </body>
 </html>
